--- a/car-service/pom.xml
+++ b/car-service/pom.xml
@@ -40,6 +40,11 @@
 			<version>4.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.h2database</groupId>
