--- a/config-data/eureka-service.yml
+++ b/config-data/eureka-service.yml
@@ -4,4 +4,5 @@ eureka:
   client:
     fetch_registry: false
     register-with-eureka: false
-    
+    service-url: 
+      default-zone: http://${eureka.instance.hostname}:${server.port}
