--- a/config-data/user-service.yml
+++ b/config-data/user-service.yml
@@ -17,7 +17,7 @@ spring:
   # ===============================
   datasource:
     url: jdbc:mysql://localhost:3036/invoiceDB
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     username: root
     password: user
 
