--- a/config-data/car-service.yml
+++ b/config-data/car-service.yml
@@ -8,6 +8,7 @@ spring:
       database: car-service
       port: 27017
       host: localhost
+      uri: mongodb://localhost:27017/car-service
 
 eureka:
   client:
