--- a/config-data/car-service.yml
+++ b/config-data/car-service.yml
@@ -9,6 +9,9 @@ spring:
       port: 27017
       host: localhost
       uri: mongodb://localhost:27017/car-service
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
 
 eureka:
   client:
