--- a/config-data/bike-service.yml
+++ b/config-data/bike-service.yml
@@ -3,18 +3,14 @@ server:
 
 
 spring:
-  h2:
-    console:
-      enabled: true
   # ===============================
   # DB
   # ===============================
   datasource:
-    url: jdbc:h2:mem:invoiceDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    platform: h2
-    username: sa
-    password:
+    url: jdbc:postgresql://localhost:5432/testdb
+    driverClassName: org.postgresql.Driver
+    username: postgres
+    password: user
 
   # ===============================
   # JPA / HIBERNATE
@@ -23,7 +19,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
         show_sql: true
