--- a/config-data/bike-service.yml
+++ b/config-data/bike-service.yml
@@ -7,7 +7,7 @@ spring:
   # DB
   # ===============================
   datasource:
-    url: jdbc:postgresql://localhost:5432/testdb
+    url: jdbc:postgresql://localhost:5432/Micro
     driverClassName: org.postgresql.Driver
     username: postgres
     password: user
